--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -27,7 +27,7 @@ body {
 	width: 100%;
 }
 	
-#header {
+.header {
 	width: 100%;
 	height: 44px;
 //	position: fixed;
@@ -36,7 +36,7 @@ body {
 	padding-top: 0px;
 }
 
-#headerText {
+.headerText {
 	font-size: 1.0em;
 	font-family: tahoma, arial;
 	color: white;
@@ -48,9 +48,9 @@ body {
 	
 
 
-#header .ui-btn { margin: 0px; padding-left: 8px; padding-right: 8px; top: 4px; height: 34px; border-radius: 6px; }
+.header .ui-btn { margin: 0px; padding-left: 8px; padding-right: 8px; top: 4px; height: 34px; border-radius: 6px; }
 
-#header .ui-btn-inner { border: 0px; margin-top: 5px;}
+.header .ui-btn-inner { border: 0px; margin-top: 5px;}
 
 
 
@@ -150,7 +150,7 @@ body {
 
 }
 
-#footer {
+.footer {
 	width: 100%;
 	height: 44px;
 	position: fixed;
@@ -161,16 +161,16 @@ body {
 	margin: 0px;
 	}
 	
-#footer .ui-btn { background: transparent; height: 44px;  top: 0px !important; bottom: 0px !important; padding: 0px; margin: 0px; border-color: transparent; box-shadow: none; padding: 0px}
+.footer .ui-btn { background: transparent; height: 44px;  top: 0px !important; bottom: 0px !important; padding: 0px; margin: 0px; border-color: transparent; box-shadow: none; padding: 0px}
 
-#footer .ui-btn-inner { margin-top: 6px; border: 0px }
+.footer .ui-btn-inner { margin-top: 6px; border: 0px }
 
-#footer .ui-icon {
+.footer .ui-icon {
 	background-color: rgba(0,0,0,0.0);
 	box-shadow: none;
 }
 
-#holenav {
+.holenav {
 	color: #ccc;
 }
 
@@ -315,7 +315,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 	font-weight: bold;
 }
 
-#scBirdie {
+.scBirdie {
 	color: black;
 	font-weight: bold;
 	padding: 1px;
@@ -345,7 +345,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 	border-color: black;
 } */
 	
-#scEagle {
+.scEagle {
 //	color: red;
 	padding:1px;
 	border-width: 1px;
@@ -364,7 +364,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 	
 }
 
-#scBogey {
+.scBogey {
 	padding: 1px;
 	margin: 1px;
 	border-width: 1px;
@@ -383,7 +383,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 
 }
 
-#scDouble {
+.scDouble {
 	padding: 1px;
 	margin: 1px;
 	border-width: 1px;
@@ -443,7 +443,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 	border-top-width: 0px;
 }
 
-#scHeaders {
+.scHeaders {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
@@ -460,7 +460,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e0e0e0', endColorstr='#c0c0c0',GradientType=0 ); /* IE6-9 */
 }
 
-#scCells {
+.scCells {
 	padding: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
@@ -475,7 +475,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f8f8f8',GradientType=0 ); /* IE6-9 */
 }
 
-#scScoreCells {
+.scScoreCells {
 	padding: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
@@ -492,7 +492,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f8f8f8',GradientType=0 ); /* IE6-9 */
 }
 
-#scTotals {
+.scTotals {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
@@ -509,22 +509,22 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; }
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 ); /* IE6-9 */
 }
 
-#teeYellow {
+.teeYellow {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
 	padding: 1px;
 	background: rgb(254,245,224); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(254,245,224,1) 0%, rgba(254,232,172,1) 50%, rgba(255,222,131,1) 51%, rgba(253,240,205,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,245,224,1)), color-stop(50%,rgba(254,232,172,1)), color-stop(51%,rgba(255,222,131,1)), color-stop(100%,rgba(253,240,205,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', endColorstr='#fdf0cd',GradientType=0 ); /* IE6-9 */
+	background: -moz-linear-gradient(top, rgba(254,245,224,1) 0%, rgba(254,232,172,1) 50%, rgba(255,222,131,1) 51%, rgba(253,240,205,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,245,224,1)), color-stop(50%,rgba(254,232,172,1)), color-stop(51%,rgba(255,222,131,1)), color-stop(100%,rgba(253,240,205,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(254,245,224,1) 0%,rgba(254,232,172,1) 50%,rgba(255,222,131,1) 51%,rgba(253,240,205,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', endColorstr='#fdf0cd',GradientType=0 ); /* IE6-9 */
 }	
 
-#teeRed {
+.teeRed {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
@@ -539,7 +539,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', end
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdd4cd', endColorstr='#f9cdc9',GradientType=0 ); /* IE6-9 */
 }
 
-#teeBlue {
+.teeBlue {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
@@ -554,19 +554,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fef5e0', end
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ecf8fc', endColorstr='#d4ecfe',GradientType=0 ); /* IE6-9 */
 }
 
-#teeWhite {
+.teeWhite {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
 	padding: 1px;
 	background: rgb(255,255,255); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(248,248,248,1) 50%, rgba(240,240,240,1) 51%, rgba(251,251,251,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(248,248,248,1)), color-stop(51%,rgba(240,240,240,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(248,248,248,1) 50%, rgba(240,240,240,1) 51%, rgba(251,251,251,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(248,248,248,1)), color-stop(51%,rgba(240,240,240,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(248,248,248,1) 50%,rgba(240,240,240,1) 51%,rgba(251,251,251,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
 }
 
 
