--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/site_styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/site_styles.css
@@ -8,16 +8,37 @@ body {
 //	background-color: black;
 //	background: black;
 	overflow-y: visible;
+	height: 100%;
 }
 
-#content {
+.content {
 //	background: url('../images/white_wall_hash.png') !important;
 	background-color: rgba(100, 100, 100, 0.1);
 //	opacity: 0.5;
+	margin: 5px;
+	margin-top: 0px;
+	padding: 15px;
+	padding-top: 15px;
 	border-radius: 4px;
+	
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
 	border-width: 1px;
 	border-style: solid;
+//	border-top: 0px;
 	border-color: rgba(0, 0, 0, 0.1);
+}
+
+.head {
+	padding-top: 2px;
+	padding-bottom: 2px;
+	margin: 5px;
+	margin-bottom: 0px;
+	background: Silver;
+	color: #000;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	text-align: center
 }
 	
 .ui-page.ui-body-c  {
@@ -714,21 +735,41 @@ body {
 	padding-top: 15px;
 }
 
-#courseListWrap form {
+/* #courseListWrap form {
 	padding-bottom: 0px !important;
 	margin-bottom: 0px !important;
     margin-left     : 0px !important;
 	margin-right: 0px !important;
     width    : 100%;
     z-index  : 1;
-}​
+}​ */
 
 #courseSelect {
 	width: 100%;
 }	
 
 #courseList {
-	width: 100%;
+//	width: 100%;
+	float:left;
+	overflow: auto;
+	position: absolute;
+	bottom: 0px;
+	top: 52px;
+	width: 250px;
+//	height: 750px;
+
 }
 
+#holeEdit {
+	width: 300px;
+	margin-left: 255px;
+}
 
+div#navbar {
+	text-align: center;
+}
+
+div#navbar ul {
+	display: inline-block;
+	list-style-type: none;
+}
