--- a/src/Apex/ApexScoreCardBundle/Resources/views/Site/course_add.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Site/course_add.html.twig
@@ -18,16 +18,24 @@
  	<script src="{{ asset('bundles/apexscore/js/jquery-ui.js') }}" type="text/javascript"></script>
  	<script src="{{ asset('bundles/apexscore/js/parsley.js') }}" type="text/javascript"></script>
  	<script src="{{ asset('bundles/apexscore/js/site.js') }}" type="text/javascript"></script>
+ 	
+<!-- 	<script src="{{ asset('bundles/apexscore/js/foundation.min.js') }}"></script> -->
+ 	
+ 	
 </head>
 
 <body style="font-family: arial">
 	<div style="margin: 15px">
 		<span style="font-weight:bold; font-size: 120%"><a href="#" data-bind="click: newCourse">Add new course</a></span>
 	</div>
-	<div class="ui-widget" style="float:left; margin: 5px; padding: 15px; overflow:auto; position:absolute; bottom:0; top:30px; width: 250px">
-		<div>
+	<div id="courseList" class="ui-widget">
+<!--		<div class="head">
+			<h3>Course list</h3>
+		</div> -->
+		<div class="content">
 
-			<ul data-bind="foreach: courseList">
+
+			<ul data-bind="foreach: courseList" style="padding-top: 2px; margin-top: 0px">
 				<li>
 				<a href="#" data-bind="click: $root.getCourseGeneralData.bind($data, id)"><span data-bind="text: name"></span></a>
 				</li>
@@ -37,8 +45,7 @@
 	</div>
 
 	<!-- ko if: holes().length > 0 -->	
-
-	<div id="content" style="margin: 5px; padding: 15px; float:left; margin-left: 300px">
+	<div class="content" id="holeEdit" style="float:left; margin-left: 255px">
 
 		<form data-validate="parsley" id="form"> 
 	
@@ -87,8 +94,7 @@
 				
 						<!-- ko if: redTeeEnabled() == true -->
 							<td>
-								<span id="error" style="font-size: 66%"></span>
-								<input type="text" data-bind="value: courseCrRedMen" id="teeRed" maxlength="4" style="width: 2.5em" data-required="true" data-type="number" data-trigger="keyup" data-error-container="#error" />
+								<input type="text" data-bind="value: courseCrRedMen" id="teeRed" maxlength="4" style="width: 2.5em" data-required="true" data-type="number" data-trigger="keyup" data-error-container="#rror" />
 							</td>
 						<!-- /ko -->
 						<!-- ko if: blueTeeEnabled() == true -->
@@ -324,7 +330,7 @@
 	</div>
 
 	
-	<div id="content" style="margin: 5px; padding: 15px; float:left">
+	<div class="content" style="float:left">
 	
 	<!-- ko if: playerId() == addedBy() || addedBy() == null || course_id() == "new"  -->	
 	
