--- a/src/Apex/ApexScoreCardBundle/Resources/views/Site/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Site/index.html.twig
@@ -3,32 +3,84 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width" />
     
+  	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/foundation.min.css') }}" type="text/css" media="screen" rel="stylesheet" />
+  	
   	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/site_styles.css') }}" type="text/css" media="screen" rel="stylesheet" />
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
+  	
+<!--	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" /> -->
 
-	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+	<script src="http://code.jquery.com/jquery-2.0.0.js"></script>
 
    	<script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
- 	<script src="{{ asset('bundles/apexscore/js/jquery-ui.js') }}" type="text/javascript"></script>
+<!-- 	<script src="{{ asset('bundles/apexscore/js/jquery-ui.js') }}" type="text/javascript"></script> -->
+
+ 	<script src="{{ asset('bundles/apexscore/js/foundation/foundation.js') }}" type="text/javascript"></script>
+ 	<script src="{{ asset('bundles/apexscore/js/foundation/foundation.topbar.js') }}" type="text/javascript"></script>
+ 	<script src="{{ asset('bundles/apexscore/js/site.js') }}" type="text/javascript"></script>
     
 </head>
 
 
-
 <body>
+	<div class="row" style="padding: 10px">
+		<div class="small-3 columns">
+			Diipa
+		</div>
+		<div class="small-3 columns">
+			Daapa
+		</div>
+		<div class="small-3 columns">
+			Doo
+		</div>
+		<div class="small-3 columns">
+			Poo
+		</div>
+	</div>
+	
+	<div id="navbar">
+		<nav class="top-bar">
+			<ul class="title-area">
+				<!-- Title Area -->
+				<li class="name">
+					<h1><a href="#">Top Bar Title </a></h1>
+				</li>
+				<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+		<!--		<li class="toggle-topbar menu-icon"><a  href="#"><span>Menu</span></a></li> -->
+			</ul>
+	
+			<section class="top-bar-section">
+				<!-- Left Nav Section -->
+				<ul class="left" style="display: inline-block">
+					<li class="divider"></li>
+					<li class="active">
+						<a href="#">Rounds</a>
+					</li>
+					<li class="divider"></li>
+					<li>
+						<a href="#">Stats</a></li>
+					<li class="divider"></li>
+					<li>
+						<a href="#">Courses</a>
+					</li>
+					<li class="divider"></li>
+					<li class="name">
+						<h1><a href="#">App</a></h1>
+					</li>
+					<li class="divider"></li>
+				</ul>
+			</section>
+		</nav>
+	</div>
 
+<!--
 	<div class="ui-widget" style="padding: 15px">
 
-		<a href="http://valta.me/app/">App</a>			
-		<p><img src="{{ asset('bundles/apexscore/images/hogan53.png') }}">
-
+		<a href="http://valta.me/app/">App</a>			 -->
 <!--
 		<input type="text" id="courseName" maxlength="255" />
 		<input type="text" id="courseAlias" maxlength=255" /> -->
-	
-	</div>	
-	
 	
 	
 	
