--- a/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
@@ -99,8 +99,12 @@ var ApexEventProxy = function() {
     	self.proxy.post('{{path('hole_json_set')}}', data, done, fail, always);
     };
 
-	self.deleteRound  = function (data, done, always, fail) {
+	self.deleteRound = function (data, done, always, fail) {
     	self.proxy.post('{{path('round_json_delete')}}', data, done, fail, always);
+    };
+
+	self.getRecentCourses = function (data, done, always, fail) {
+    	self.proxy.post('{{path('round_json_get_recent_courses')}}', data, done, fail, always);
     };
 
 
